plugins {
    id 'java'
    id 'jacoco'  // Agrega el plugin de Jacoco
}

group = 'com.universidad'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
}

test {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
    finalizedBy jacocoTestReport  // Genera el reporte DESPUÉS de correr los tests
}

jacocoTestReport {
    dependsOn test  // Asegura que los tests corran antes del reporte
    reports {
        xml.required = true   // Necesario para el pipeline
        html.required = true  // Reporte visual navegable
    }
}